# discover

./: CMakeLists.txt  Notes.odt
cmake/: FindFWUPD.cmake  FindLIBFWUPD.cmake
cmake/modules/Fwupd/: FwupdConfig.cmake  FwupdConfigVersion.cmake
libdiscover/Category/: CategoryModel.cpp
libdiscover/backends/: CMakeLists.txt
libdiscover/backends/FwupdBackend/: CMakeLists.txt  FwupdBackend.cpp  FwupdBackend.h  FwupdNotifier.cpp  FwupdNotifier.h  FwupdResource.cpp  FwupdResource.h  FwupdReviewsBackend.cpp  FwupdReviewsBackend.h  FwupdSourcesBackend.cpp  FwupdSourcesBackend.h  FwupdTransaction.h  fwupd-backend-categories.xml
libdiscover/backends/FwupdBackend/tests/: FwupdTest.cpp
libdiscover/tests/: CategoriesTest.cpp
